fixed small style issue with sizing of text on homescreen on mobile

--- a/one-commercial/src/components/styles/home/hometextblock.sass
+++ b/one-commercial/src/components/styles/home/hometextblock.sass
@@ -8,6 +8,10 @@
   font-size: 12pt
   @include edgesnap 
     font-size: 1.2vw
+  @include tablet-phone 
+    font-size: 1.9vw
+  @include phone-large 
+    font-size: 2.4vw
   &__content
     display: flex 
     flex-direction: column
